application/payments-app/payments-processor.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: payments-processor
  labels:
    app: payments-processor
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: payments-processor
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      service: payments-processor
      app: payments-processor
  template:
    metadata:
      labels:
        service: payments-processor
        app: payments-processor
      annotations:
        "consul.hashicorp.com/connect-inject": "true"
    spec:
      serviceAccountName: payments-processor
      containers:
        - name: payments-processor
          image: rosemarywang/payments-processor
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          ports:
            - containerPort: 8080
